Update main.yml - uwu

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,12 +4,12 @@ on: push
 jobs:
   hola_mundo:
     runs-on: ubuntu-latest
+    permissions:
+      security-events: write
 
 
     steps:
-      - name: Descargar codigo
-        run: pip install pytest
       - name: Bajar codigo
-        uses: actions/checkout@v4
-      - name: Probar codigo
-        run: pytest test.py
+        uses: advanced-security/python-lint-code-scanning-action@v1
+        with: 
+          linter: pylint
